NN-1380 [Activities] Update Cat A H to Cat A High, stop E-List flag wrapping and update Acct flag Colour

--- a/app/components/Bookings/Details/header.scss
+++ b/app/components/Bookings/Details/header.scss
@@ -164,8 +164,8 @@
 
 .acct-status {
   @extend %status-style;
-  color: #F47738;
-  border-color: #F47738;
+  color: #D34700;
+  border-color: #D34700;
 }
 
 .assault-status {
